<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nav.MainActivity" >

    <item android:id="@+id/item2"
        android:orderInCategory="3"
        android:title="@string/slideshow"
        android:icon="@drawable/slideshow"
        app:showAsAction="always"/>
  	<item android:id="@+id/item3"
        android:orderInCategory="2"
        android:title="@string/video"
        android:icon="@drawable/dailymotion"
        app:showAsAction="always"/>
  	<item android:id="@+id/item5"
  	    android:orderInCategory="1"
        android:icon="@drawable/fb"
        android:title="@string/fb"
        app:showAsAction="always"/>
  	<item android:id="@+id/item4"
  	    android:orderInCategory="100"
        android:title="@string/updates"
        app:showAsAction="never"/>
</menu>
