<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/grey">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView9" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:text="Fields in red must be filled"
        android:textColor="#ff0000" />
 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/Nm"
        android:textColor="#ff0000"  />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:ems="10"
        android:hint="@string/na"
        android:inputType="textPersonName"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="14dp"
        android:text="@string/sex" 
        android:textColor="#ff0000" />

<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp" 
    android:id="@+id/rd">

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:text="M" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:text="F" />
</RadioGroup>

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="14dp"
    android:text="@string/occupation"
    android:textColor="#ff0000" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:textSize="13sp" 
    android:ems="10" >
</EditText>
<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="14dp"
    android:text="@string/residence"
    android:textColor="#ff0000" />

<EditText
    android:id="@+id/editText3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:textSize="13sp" 
    android:ems="10"
    android:inputType="textPostalAddress" >
</EditText>

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="14dp"
    android:text="@string/mobile"
    android:textColor="#ff0000" />

<EditText
    android:id="@+id/editText4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:ems="10"
    android:hint="@string/no"
    android:inputType="phone"
    android:textSize="13sp" >

</EditText>

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="14dp"
    android:text="@string/req"/>

<ListView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lv"
     >

</ListView>
<TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="14dp"
    android:text="@string/oth"/>

<Spinner
    android:id="@+id/spinner1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"  />

<TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:text="@string/email"
    android:textColor="#ff0000"  />

<EditText
    android:id="@+id/editText5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14dp"
    android:ems="10"
    android:hint="@string/mail"
    android:inputType="textEmailAddress"
    android:textSize="13sp" >

</EditText>
<Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="Submit" />
</LinearLayout>

</ScrollView>